[B]0.5.7[/B]
Info-wall view for episodes
Added clear, rename and select item to configuration options
Added moviesets as a preset custom item
Backgrounds dialog menu
Fixed reflections option for weather widget

[B]0.5.6[/B]
Info-list for videos
Show labels view option for thumbnails in music view
Added scroll bar for info list plot
Modified info list for sets icons and sets plot
Fixed missing in-progress tv-show

[B]0.5.5[/B]
Clean-up of music view types
Added new music view types -- info list, info strip, horz wall
Ported lovefilm
Modified existing types info wall for added labels
New thumbs view

[B]0.5.2[/B]
Hide empty submenu tiles except one at end
Center submenu tiles
Added weather fanart as an option for global fanart 

[B]0.5.1[/B]
Removed Aeon Nox backgrounds
Fixed Panel home labels in widgets
Fixed some widgets not showing for panel
Made slideshow for system info custom
Dialogkeyboard.xml can now take a custom_label property
Use custom_label property to distinguish setting path from label
Added preset items weather, update, clean and music videos
Fixed on-screen video info issue


[B]0.5.0[/B]
GUI customisation of categories, widgets, submenus, backgrounds
Widgets can be set for any category
Addition of tv next aired widget (enable 'show all TV Shows for home screen' in Next Aired addon settings
Addition of smart playlist widgets (randomandlastitems)
Reorganisation of skin settings
Added 'configure' to bottom power menu
Customisation of weather category
Added Aeon Nox backgrounds for categories
28 Template category/submenu items + 9 custom options
Option to auto pop-up widgets after delay for simple home
Option to choose between tabbed and offset Clocks/Volume on OSD
Re-added option to turn off simplified seekbar (Experimental at this stage)
Option to hide plot for OSD

[B]0.4.7[/B]
Update simple home widgets style
Added label for simple home widgets
Changed widget clearlogo placeholders to blank images