@@ -1135,6 +1135,18 @@
 						<aspectratio>stretch</aspectratio>
 						<texture border="15">views/other/focus-mod8.png</texture>
 					</control>
+					<control type="progress" id="2">
+						<posx>2</posx>
+						<posy>0</posy>
+						<width>98</width>
+						<height>84</height>
+						<reveal>true</reveal>
+						<texturebg>views/other/focus-mod8-progress-nf.png</texturebg>
+						<lefttexture>-</lefttexture>
+						<midtexture border="15">views/other/focus-mod8-progress.png</midtexture>
+						<righttexture>-</righttexture>
+						<info>ListItem.Progress</info>
+					</control>
 					<control type="label" id="1">
 						<posx>17</posx>
 						<posy>0</posy>
